--- a/src/styles/views/editor/components/scene/components/waveform/index.sass
+++ b/src/styles/views/editor/components/scene/components/waveform/index.sass
@@ -1,4 +1,8 @@
 @import "styles/vars"
 
-// section.c-waveform-basics
-// 	color: red
+section.c-waveform-basics
+	div.wab-appearance
+		display: flex
+		align-items: flex-start
+		justify-content: space-between
+		+childSpaceRight(10px)
